--- a/overlay.css
+++ b/overlay.css
@@ -18,13 +18,17 @@ a:focus {
   height: 0%;
   opacity: 0;
   visibility: hidden;
-  transition: opacity 0.3s, visibility 0.3s, height 0.8s;
+  transition: opacity 0.5s, visibility 0.5s, height 0.7s;
   display: flex;
   align-items: flex-end;
+  pointer-events: none;
 }
+
 .overlay.open {
   opacity: 1;
   visibility: visible;
   height: 100%;
-  transition: 0.5s;
+  transition: opacity 0.7s, visibility 0.7s, height 0.5s;
+  pointer-events: auto;
 }
+
