--- a/video-grid.css
+++ b/video-grid.css
@@ -59,9 +59,9 @@
     visibility: hidden;
     width:100%;
     height: 100%;
-    background-color: rgba(0,0,0,0.9);
+    background-color: rgba(23,22,18,0.7);
     position: absolute;
-    z-index: 100;
+    z-index: 20;
   }
 
   .message-content {
@@ -86,6 +86,11 @@
     color:var(--main-color);
   }
 
+  .message-content .text-container .switch-menu {
+    color: rgb(229,203,170);
+    text-decoration: underline;
+  }
+
   .message-content .text-container div{
     margin:20px 0;
   }
@@ -94,6 +99,7 @@
     font-weight: 800;
     font-family: 'Personify';
     font-size: 60px;
+    border-bottom: 2px solid rgb(229,203,170);
   }
 
   .message-content .text-container hr{
@@ -101,12 +107,13 @@
   }
 
   .message-content .text-container .button{
-    width: 160px;
+    width: 190px;
     height: 50px;
     border: var(--main-color) solid 2px;
     text-align: center;
     line-height: 55px;
     border-radius: 30px;
+    font-size: 18px;
   }
 
   .controls {
@@ -162,17 +169,70 @@
 }
 
 @media screen and (max-width: 640px) {
+  .message {
+    background-color: rgba(23,22,18,0.97);
+  }
   .message-content {
     flex-direction: column;
+    align-items: center;
+    width: 90%;
+  }
+  .message-content .text-container div{
+    margin: 0;
+  }
+  .message-content img {
+    height: 35vh;
+
+  }
+  .message-content .text-container, .message-content .image-container {
+    flex: auto;
+    display: block;
+    margin-bottom: 4px;
+  }
+  .message-content .image-container {
+    display: inline-table;
+  }
+
+  .message-content .text-container {
+    font-size: 18px;
+  }
+
+  .message-content .text-container .congrats-title{
+    font-size: 30px;
+    border-bottom: 0;
+    margin-bottom: 0.5rem;
+  }
+
+  .message-content .text-container .button{
+    width: 162px;
+    height: 37px;
+    font-size: 18px;
+    margin: 0.7rem 0;
+    line-height: 40px;
   }
   #ticket {
-    height: calc(100vh - 150px);
+    height: calc(100vh - 115px);
   }
 }
 
 @media screen and (max-width: 356px) {
   #ticket {
     height: calc(100vh - 115px);
+  }
+}
+
+@media screen and (max-width: 371px) {
+  .message-content .text-container {
+    font-size: 14px;
+  }
+  .message-content img {
+    height: 30vh;
+  }
+  .message-content .text-container .button {
+    width: 152px;
+    height: 40px;
+    font-size: 16px;
+    line-height: 43px;
   }
 }
 
